hphp/hack/test/typecheck/missing_param_typehint.php.exp
File "missing_param_typehint.php", line 3, characters 15-20:
Was expecting a type hint (Typing[4032])
