hphp/hack/test/typecheck/missing_param_typehint.php
<?hh

function test($param): int {
  return 0;
}
